--- a/Week-08-CSS/styles8.css
+++ b/Week-08-CSS/styles8.css
@@ -91,13 +91,13 @@ table{
     box-shadow: 8px 8px 5px #444;
 }
 th{
-    padding 15px;
+    padding: 10px;
     border: 2px solid black; 
     border-radius: 3px;
     text-align: center;
 }
 td {
-    padding 25px;
+    padding: 15px;
     border: 2px solid black;
     border-radius: 3px;
     text-align: center;
