--- a/Week-08-CSS/styles8.css
+++ b/Week-08-CSS/styles8.css
@@ -11,6 +11,7 @@
     align-items: center;
     background-image: linear-gradient(270deg, rgb(80, 79, 79), rgb(68, 205, 63));
     box-shadow: 8px 8px 5px #444;
+    text-shadow: 8px 8px 5px #444;
 }
 
 nav > ul {
@@ -29,6 +30,7 @@ button{
     font-size: 20px;
     border-radius: 10px;
     background-image: linear-gradient(90deg, rgb(80, 79, 79), rgb(68, 205, 63));
+    box-shadow: 8px 8px 5px #444;
 }
 button:hover {
     background-image: linear-gradient(270deg, rgb(80, 79, 79), rgb(68, 205, 63));
@@ -43,11 +45,6 @@ body{
     width: 50%;
     border: 3px solid green;
     padding: 10px;
-}
-#headstock{
-    height: 200px;
-    width: 50%;
-    margin: auto;
 }
 .center-text{
     margin: auto;
@@ -107,10 +104,25 @@ td {
 p{
     font-family: Arial, Helvetica, sans-serif;
 }
-
-
-@media (prefers-reduced-motion: no-preference) {
-    * {
-      scroll-behavior: smooth;
-    }
-  }
+li{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.center-form{
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    
+}
+input{
+    padding: 5px;
+    background-color: #adacac;
+    margin: auto;
+    border: 1px solid black;
+    box-shadow: 8px 8px 5px #444;
+    border-radius: 8px;
+    width: 400px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#submit{
+    width: 400px;
+}
