--- a/Week-08-CSS/styles8.css
+++ b/Week-08-CSS/styles8.css
@@ -48,13 +48,17 @@ body{
 }
 .center-text{
     margin: auto;
-    width: 50%;
+    width: 75%;
     padding: 10px;
+    text-align: center;
 }
 h1{
     margin: auto;
     width: 50%;
     padding: 5px;
+}
+h3 {
+    font-weight: bold;
 }
 table{
     margin: auto;
@@ -63,6 +67,7 @@ table{
     display: none;
     margin: auto;
     width:100%;
+    border-radius: 1rem;
     
     
 }
@@ -72,7 +77,7 @@ table{
     margin: auto;
     width: 50%;
     border: 3px solid green;
-    border-radius: 3px;
+    border-radius: 1rem;
     padding: 10px;
     object-fit: contain;
     overflow: hidden;
@@ -96,6 +101,7 @@ th{
 td {
     padding: 15px;
     border: 2px solid black;
+    
     border-radius: 3px;
     text-align: center;
     letter-spacing: 1px;
@@ -106,6 +112,7 @@ p{
 }
 li{
     font-family: Arial, Helvetica, sans-serif;
+    text-align: start;
 }
 .center-form{
     display: flex;
@@ -126,3 +133,23 @@ input{
 #submit{
     width: 400px;
 }
+
+@media only screen and (max-width: 500px) {
+    body {
+      margin: 0rem;
+    }
+    p,
+    li {
+      font-size: 16px;
+    }
+   #header{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    }
+    nav > ul {
+    display: block;
+    flex-wrap: wrap;
+    justify-content: center;   
+    }
+  }
