--- a/Week-08-CSS/styles8.css
+++ b/Week-08-CSS/styles8.css
@@ -1,3 +1,4 @@
+/*Header and Nav Styles*/
 #header {
     top: 0;
     width: 100%;
@@ -24,6 +25,7 @@ nav > ul {
     align-items: center;
     list-style-type: none;
 }
+
 button{
     width: 200px;
     font-family: Helvetica;
@@ -32,19 +34,16 @@ button{
     background-image: linear-gradient(90deg, rgb(80, 79, 79), rgb(68, 205, 63));
     box-shadow: 8px 8px 5px #444;
 }
+
 button:hover {
     background-image: linear-gradient(270deg, rgb(80, 79, 79), rgb(68, 205, 63));
     color: rgb(198, 202, 199);
-  }
+}
+
+/*Main body and text styles*/
 body{
     background-image: linear-gradient(310deg, rgb(80, 79, 79), rgb(68, 205, 63));
     
-}
-.image{
-    margin: auto;
-    width: 50%;
-    border: 3px solid green;
-    padding: 10px;
 }
 .center-text{
     margin: auto;
@@ -52,25 +51,34 @@ body{
     padding: 10px;
     text-align: center;
 }
+
 h1{
     margin: auto;
     width: 50%;
     padding: 5px;
 }
+
 h3 {
     font-weight: bold;
 }
-table{
-    margin: auto;
+
+p{
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+li{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: start;
+}
+
+/*Image and Slideshow Styles*/
 .slides{
     display: none;
     margin: auto;
     width:100%;
-    border-radius: 1rem;
-    
-    
+    border-radius: 1rem; 
 }
+
 .slideshow{
     max-width: 520px;
     max-height: 320px;
@@ -83,43 +91,47 @@ table{
     overflow: hidden;
     justify-content: center;
     box-shadow: 8px 8px 5px #444;
-    
 }
+
+.image{
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
+}
+
+/*Table Styling*/
 table{
+    margin: auto;
     table-layout: fixed;
     width: 60%;
     border-radius: 3px;
     border-collapse: collapse;
     box-shadow: 8px 8px 5px #444;
 }
+
 th{
     padding: 10px;
     border: 2px solid black; 
     border-radius: 3px;
     text-align: center;
 }
+
 td {
     padding: 15px;
     border: 2px solid black;
-    
     border-radius: 3px;
     text-align: center;
     letter-spacing: 1px;
+}
 
-}
-p{
-    font-family: Arial, Helvetica, sans-serif;
-}
-li{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: start;
-}
+/*Form Styling*/
 .center-form{
     display: flex;
     justify-content: center;
     padding: 5px;
-    
 }
+
 input{
     padding: 5px;
     background-color: #adacac;
@@ -130,23 +142,28 @@ input{
     width: 400px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 #submit{
     width: 400px;
 }
 
+/*Responsiveness for Mobile*/
 @media only screen and (max-width: 500px) {
     body {
       margin: 0rem;
     }
+
     p,
     li {
       font-size: 16px;
     }
-   #header{
+
+    #header{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     }
+
     nav > ul {
     display: block;
     flex-wrap: wrap;
