--- a/Week-11-JQuery_and_AJAX/tictac.css
+++ b/Week-11-JQuery_and_AJAX/tictac.css
@@ -20,10 +20,12 @@ body {
     font-size: 50px;
     display: flex;
     justify-content: center;
+    text-shadow: 2px 2px 2px pink;
 }
 .turn-display{
     color: White;
     font-size: 50px;
     display: flex;
     justify-content: center;
+    text-shadow: 2px 2px 2px pink;
 }
