--- a/Week-11-JQuery_and_AJAX/tictac.css
+++ b/Week-11-JQuery_and_AJAX/tictac.css
@@ -18,10 +18,14 @@ body {
 #game-result{
     color: White;
     font-size: 50px;
+    margin: auto;
     display: flex;
+    align-items: center;
     justify-content: center;
     text-shadow: 2px 2px 3px rgb(129, 129, 247);
+    max-width: 500px;
 }
+
 .turn-display{
     color: White;
     font-size: 50px;
@@ -29,6 +33,7 @@ body {
     justify-content: center;
     text-shadow: 3px 3px 5px rgb(129, 129, 247);
 }
+
 .grid{
     width: 400px;
     align-items: center;
