--- a/Week-13-Intro_to_React_Webpack_Components_and_JSX/src/app.css
+++ b/Week-13-Intro_to_React_Webpack_Components_and_JSX/src/app.css
@@ -22,7 +22,7 @@ nav{
 nav ul {
     display: flex;
     flex-direction: row;
-    justify-content: right;
+    justify-content: left;
 }
 
 nav ul li {
@@ -37,10 +37,50 @@ nav ul li:active {
 background-color: chocolate;
 }
 
+#wrapper {
+    margin: auto;
+    max-width: 35vw;
+    text-align: center;
+    border: 4px solid darkolivegreen;
+    border-radius: 10px;
+    box-shadow: 10px 10px lightslategray;
+
+}
+
 .loginForm {
     display: flex;
     text-align: start;
     justify-content: center;
     background-color: beige;
     padding: 1em;
+    
+}
+
+/* Css for About Page */
+#content {
+    text-align: center;
+}
+
+#ctable{
+    display: flex;
+    text-align: start;
+    justify-content: center;
+    background-color: beige;
+    padding: 1em;
+    
+    
+}
+
+#ctable table{
+    border: 1px solid black;
+}
+#ctable td{
+    border: 1px solid black;
+    margin: 1px;
+    padding: 1px;
+}
+#ctable th{
+    border: 1px solid black;
+    margin: 1px;
+    padding: 1px;
 }
