--- a/Week-14-Props_State_Events_and_Lifecycle_Methods/src/star.css
+++ b/Week-14-Props_State_Events_and_Lifecycle_Methods/src/star.css
@@ -1,8 +1,10 @@
+/* unclicked stars */
 .star {
     color: black;
     cursor: pointer;
   }
-  
+
+/* clicked stars */
   .star.active {
     color: yellow;
   }
