--- a/Week-15-REST_Fetch_Functional_Components_and_Best_Practices/src/index.css
+++ b/Week-15-REST_Fetch_Functional_Components_and_Best_Practices/src/index.css
@@ -57,6 +57,8 @@ nav{
   color: white;
   font-size: 24px;
   padding: 1px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 2px #905755;
 }
 
 nav ul {
